--- a/blog_page_styles.css
+++ b/blog_page_styles.css
@@ -35,11 +35,15 @@
 }
 
 .blog-card {
+  position: relative;
+  height: 300px;
   border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 1rem;
-  box-shadow: 2px 2px 5px rgba(0,0,0,0.1);
+  border-left: 0px;
+  border-right: 0px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   width: 100%;
+	border-image: linear-gradient(to left, #18181800, #eee, #18181800) 1 0%;
 }
 
 .blog-card h2 {
@@ -56,7 +60,26 @@
   font-size: 0.9rem;
 }
 
-.blog-card .content{
+.blog-card .content {
+  width: min(100%, 600px);
+  height: 100%;
+  overflow: hidden; /* Hides overflowing content */
+  text-overflow: ellipsis;
+}
+
+.blog-card .thumbnail {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 10px;
+  height: 100%;
+  z-index: -1;
+}
+
+.blog-card .thumbnail img {
+  height: 100%;
+  float: right;
+  object-fit: cover;
+  -webkit-mask-image: linear-gradient(to right, transparent 0%, black 90%, transparent 100%);
+  mask-image: linear-gradient(to right, transparent 0%, black 90%, transparent 100%);
 }
