--- a/styles/about_page_styles.css
+++ b/styles/about_page_styles.css
@@ -174,7 +174,7 @@
     position: relative;
     overflow: hidden;
     color: var(--text-color);
-    padding:  90px 90px 30px 90px;
+    /* padding:  90px 90px 30px 90px; */
     max-width: 800px;
     width: 100%;
     margin: auto;
@@ -189,6 +189,7 @@
     background-repeat: no-repeat;
     /* background-size: cover; */
     background-size: 100% 100%;
+    padding: 10%;
 }
 
 .paper .about-me-title {
@@ -203,7 +204,7 @@
   font-style: italic;
   font-weight: 500;
   text-align: center;
-  margin: 0px 0px 80px 0px;
+  margin: 0px;
 }
 
 
